testsuite/tests/partial-sigs/should_fail/NamedWildcardInDataFamilyInstanceLHS.stderr

NamedWildcardInDataFamilyInstanceLHS.hs:8:21: error:
    Unexpected wild card: ‘_a’
    In the data type declaration for ‘Sing’
